--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1>.</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      height: 100vh;
+    }
+    textarea {
+      width: 50%;
+      resize: none;
+      font-family: monospace;
+    }
+    canvas {
+      width: 50%;
+      height: 100%;
+    }
+  </style>
+</head>
+<body>
+  <textarea></textarea>
+  <canvas id="canvas"></canvas>
+
+  <script>
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+
+    function resizeCanvas() {
+      canvas.width = canvas.clientWidth;
+      canvas.height = canvas.clientHeight;
+      draw();
+    }
+
+    function draw() {
+      ctx.fillStyle = "lightblue";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+    }
+
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+  </script>
+</body>
+</html>
