--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       width: 50%;
       resize: none;
       font-family: monospace;
+      background-color: #2e2e2e;
+      color: white;
+      border: none;
+      padding: 10px;
+      outline: none;
     }
     canvas {
       width: 50%;
@@ -19,7 +24,7 @@
   </style>
 </head>
 <body>
-  <textarea></textarea>
+  <textarea>draw_triangle()</textarea>
   <canvas id="canvas"></canvas>
 
   <script>
@@ -33,8 +38,14 @@
     }
 
     function draw() {
-      ctx.fillStyle = "lightblue";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "black";
+      ctx.beginPath();
+      ctx.moveTo(canvas.width / 2, canvas.height * 0.2);       // Top point
+      ctx.lineTo(canvas.width * 0.2, canvas.height * 0.8);     // Bottom left
+      ctx.lineTo(canvas.width * 0.8, canvas.height * 0.8);     // Bottom right
+      ctx.closePath();
+      ctx.fill();
     }
 
     window.addEventListener("resize", resizeCanvas);
